update in layout modul and layout componant

--- a/src/app/layouts/components/header/header.component.html
+++ b/src/app/layouts/components/header/header.component.html
@@ -3,9 +3,9 @@
              <span>Colledge</span>
          
          <div class="spacer"></div>
-        <a mat-button routerLink="home"><mat-icon>home</mat-icon>Home </a>
-        <a mat-button routerLink="feedback"><mat-icon>feedback</mat-icon>Feedback </a>
-        <a mat-raised-button color="accent" routerLink="logout"><mat-icon> logout</mat-icon>logout </a>   
+        <a mat-button routerLink="/home"><mat-icon>home</mat-icon>Home </a>
+        <a mat-button routerLink="/feedback"><mat-icon>feedback</mat-icon>Feedback </a>
+        <a mat-raised-button color="/accent" routerLink="logout"><mat-icon> logout</mat-icon>logout </a>   
         </mat-toolbar>
 
 <router-outlet></router-outlet>
