--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -16,7 +16,7 @@
     </div>
     <div class="form-group">
       <label for="pwd">Password:</label>
-      <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="password" [(ngModel)]="user.enrollment" required #enrollment="ngModel"
+      <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="enrollment" [(ngModel)]="user.enrollment" required #enrollment="ngModel"
       [class.is-invalid]="enrollment.invalid && enrollment.touched"
       >
       <small class="text-danger" [class.d-none]="enrollment.valid || enrollment.untouched">Password is required field</small>
