--- a/src/app/layouts/components/header/header.component.html
+++ b/src/app/layouts/components/header/header.component.html
@@ -1,11 +1,14 @@
 <mat-toolbar color="primary" role="heading">
-  
-             <span>Colledge</span>
-         
-         <div class="spacer"></div>
-        <a mat-button routerLink="/home"><mat-icon>home</mat-icon>Home </a>
-        <a mat-button routerLink="/feedback"><mat-icon>feedback</mat-icon>Feedback </a>
-        <a mat-raised-button color="/accent" routerLink="logout"><mat-icon> logout</mat-icon>logout </a>   
-        </mat-toolbar>
-
+    <p>College</p>
+    <div class="spacer"></div>
+    <a mat-button routerLink="/home">
+        <mat-icon>home</mat-icon>Home
+    </a>
+    <a mat-button routerLink="/feedback">
+        <mat-icon>feedback</mat-icon>Feedback
+    </a>
+    <a mat-raised-button color="/accent" routerLink="logout">
+        <mat-icon> logout</mat-icon>logout
+    </a>
+</mat-toolbar>
 <router-outlet></router-outlet>
