home and other components in layout | login separate

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<ng-container>
+<ng-container *ngIf="isLoggedIn">
     <app-layouts></app-layouts>
 </ng-container>
-<router-outlet></router-outlet>
+<ng-container *ngIf="!isLoggedIn">
+    <router-outlet></router-outlet>
+</ng-container>
