change in app-route, app.html.login.comp.ts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <ng-container *ngIf="isLoggedIn">
     <app-layouts></app-layouts>
-</ng-container>
+</ng-container> 
 <ng-container *ngIf="!isLoggedIn">
     <router-outlet></router-outlet>
 </ng-container>
+
+<!-- <router-outlet></router-outlet> -->
