routes handled / restructure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<ng-container *ngIf="isLoggedIn">
+<ng-container>
     <app-layouts></app-layouts>
 </ng-container> 
-<ng-container *ngIf="!isLoggedIn">
+<!-- <ng-container *ngIf="!isLoggedIn">
     <router-outlet></router-outlet>
-</ng-container>
+</ng-container> -->
 
 <!-- <router-outlet></router-outlet> -->
