--- a/src/app/layouts/layouts.component.html
+++ b/src/app/layouts/layouts.component.html
@@ -1,5 +1,4 @@
 <div class="app-wrapper">
-    <app-drawer></app-drawer>
+    <app-drawer *ngIf="isLoggedIn"></app-drawer>
     <app-header></app-header>
 </div>
-
