--- a/src/app/layouts/components/drawer/drawer.component.css
+++ b/src/app/layouts/components/drawer/drawer.component.css
@@ -1,44 +1,61 @@
-.app-drawer-container{
-    flex: 1;
+.app-drawer-container {
+  flex: 1;
 }
 
-app.content{
-    display: flex;
-    flex: 1;
-    flex-direction: column;
+app.content {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
 }
 .mat-toolbar.mat-primary {
-    background: #0b42a8;
-    color: white;
-  }
-  .spacer{
-      flex: 1 1 auto;
-  }
+  background: #0b42a8;
+  color: white;
+}
+.spacer {
+  flex: 1 1 auto;
+}
 
-  .main-container{
-      position: absoulite;
-      top: 0;
-      bottom: 0;
-      right: 0;
-      left: 0;
-      background-color: primary;
-  }
-  .mat-sidenav{
-      width: 280px;
-      padding: 15px;
-  }
-  .mat-drawer{
-      background-color: #0b42a8;
-      color: white;
-  }
-  .main-content{
-      padding:20px;
-  }
-  .mat-sidenav-container{
-    height: 100%
-  }
-  .mat-sidenav-content, .mat-sidenav{
-      height: 100%;
-  }
-  
-  
+.main-container {
+  position: absoulite;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: primary;
+}
+.mat-sidenav {
+  width: 280px;
+  padding: 15px;
+}
+.mat-drawer {
+  background-color: #0b42a8;
+  color: white;
+}
+.main-content {
+  padding: 20px;
+}
+.mat-sidenav-container {
+  height: 100%;
+}
+.mat-sidenav-content,
+.mat-sidenav {
+  height: 100%;
+  width: 180px;
+}
+
+a {
+  text-decoration: none;
+  color: #0b42a8;
+  border-block-color: white;
+}
+
+a:hover,
+a:active {
+  color: lightgray;
+}
+
+.nav-caption {
+  display: inline-block;
+  padding-left: 6px;
+  color: #6a6a6a;
+}
