--- a/src/app/layouts/components/drawer/drawer.component.html
+++ b/src/app/layouts/components/drawer/drawer.component.html
@@ -1,8 +1,22 @@
 <mat-sidenav-container class='app-drawer-container' halfscreen>
-    <mat-sidenav #sidenav mode="side" role="nevigation">
+    <!-- <mat-sidenav #sidenav mode="side" role="nevigation">
         <app-sidenav-list (sidenavClose)="sidenav.close()"></app-sidenav-list>
-    </mat-sidenav>
+    </mat-sidenav> -->
     <mat-sidenav-content>
-        <button mat-button (click)="sidenav.toggle()">main content</button>
+        <!-- <button mat-button (click)="sidenav.toggle()">main content</button> -->
+        <mat-nav-list>
+            <a  mat-list-item routerLink="/transcript">
+                <span class="nav-caption">Transcript</span>
+            </a>
+            <a  mat-list-item routerLink="/degreecertificate">
+                <span class="nav-caption">Degree certificate</span>
+            </a>
+            <a  mat-list-item routerLink="/results">
+                <span class="nav-caption">Results</span>
+            </a>
+            <a  mat-list-item routerLink="/payment">
+                <span class="nav-caption">Payment</span>
+            </a>
+        </mat-nav-list>
     </mat-sidenav-content>
 </mat-sidenav-container>
