--- a/src/app/layouts/components/drawer/sidenav-list/sidenav-list.component.html
+++ b/src/app/layouts/components/drawer/sidenav-list/sidenav-list.component.html
@@ -11,7 +11,6 @@
     <a  mat-list-item routerLink="/payment" (click)="onsidenavClose()">
         <span class="nav-caption">Payment</span>
     </a>
-
 </mat-nav-list>
 
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
