--- a/src/app/layouts/components/header/header.component.css
+++ b/src/app/layouts/components/header/header.component.css
@@ -1,5 +1,19 @@
+:host {
+  display: block;
+  width: 100%;
+}
+
+.logo {
+  margin: 0;
+}
+
+a:hover {
+  color: white;
+  text-decoration: none;
+}
+
 .mat-primary {
-  background: #0b42a8;
+  background: #4a4a4a;
   color: white;
 }
 .mat-toolbar {
@@ -24,4 +38,9 @@
   background-color: transparent;
   border: 0;
   color: white;
+}
+
+button:focus,
+button:active {
+    outline: none;
 }
