--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,29 +1,32 @@
-<div class="container">
-  <h2>LogIn</h2>
-  <form #loginForm="ngForm" (ngSubmit)="loginUser()">
-    {{loginForm.form.valid}}
-    <small class="text-danger">{{msg}}</small>
-    <div class="form-group">
-      <label for="email">Email:</label>
-      <input type="email" class="form-control" placeholder="Enter email" name="email" [(ngModel)]="user.email" #email="ngModel"
-      [class.is-invalid]="email.invalid && email.touched"
-      >
-      <!-- <small class="text-danger" [class.d-none]="email.valid || email.untouched">EmailId is required field</small> -->
-      <!-- <div *ngIf="email.errors && (email.invalid && email.touched)">
-        <small class="text-danger" *ngIf="email.errors.required">EmailId is required field</small>
-        <small class="text-danger" *ngIf="email.errors.pattern">Enter the valid emailId</small>
-      </div> -->
-    </div>
-    <div class="form-group">
-      <label for="pwd">Password:</label>
-      <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="enrollment" [(ngModel)]="user.enrollment" required #enrollment="ngModel"
-      [class.is-invalid]="enrollment.invalid && enrollment.touched"
-      >
-      <small class="text-danger" [class.d-none]="enrollment.valid || enrollment.untouched">Password is required field</small>
-    </div>
-    <div class="checkbox">
-      <label><input type="checkbox" name="remember"> Remember me</label>
-    </div>
-    <button type="submit" class="btn btn-info">Log In</button>
-  </form>
-</div>
+<section>
+  <div class="login-container">
+    <h2>LogIn</h2>
+    <form #loginForm="ngForm" (ngSubmit)="loginUser()">
+      <!-- {{loginForm.form.valid}} -->
+      <small class="text-danger">{{msg}}</small>
+      <div class="form-group">
+        <label for="email">Email:</label>
+        <input type="email" class="form-control" placeholder="Enter email" name="email" [(ngModel)]="user.email" #email="ngModel"
+        [class.is-invalid]="email.invalid && email.touched"
+        >
+        <!-- <small class="text-danger" [class.d-none]="email.valid || email.untouched">EmailId is required field</small> -->
+        <!-- <div *ngIf="email.errors && (email.invalid && email.touched)">
+          <small class="text-danger" *ngIf="email.errors.required">EmailId is required field</small>
+          <small class="text-danger" *ngIf="email.errors.pattern">Enter the valid emailId</small>
+        </div> -->
+      </div>
+      <div class="form-group">
+        <label for="pwd">Password:</label>
+        <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="enrollment" [(ngModel)]="user.enrollment" required #enrollment="ngModel"
+        [class.is-invalid]="enrollment.invalid && enrollment.touched"
+        >
+        <small class="text-danger" [class.d-none]="enrollment.valid || enrollment.untouched">Password is required field</small>
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox" name="remember"> Remember me</label>
+      </div>
+      <button type="submit" class="btn btn-info">Log In</button>
+    </form>
+  </div>
+  
+</section>
