--- a/src/app/layouts/components/header/header.component.html
+++ b/src/app/layouts/components/header/header.component.html
@@ -2,8 +2,7 @@
     <p class="logo">College</p>
     <div class="spacer"></div>
     <a mat-button routerLink="/home">
-        <mat-icon>home</mat-icon>
-        <span></span>
+        <mat-icon>home</mat-icon>Home
     </a>
     <a mat-button routerLink="/feedback">
         <mat-icon>feedback</mat-icon>Feedback
