--- a/src/app/layouts/components/drawer/drawer.component.html
+++ b/src/app/layouts/components/drawer/drawer.component.html
@@ -5,12 +5,15 @@
     <mat-sidenav-content>
         <!-- <button mat-button (click)="sidenav.toggle()">main content</button> -->
         <mat-nav-list>
+            <a  mat-list-item routerLink="/home">
+                <span class="nav-caption">Dashboard</span>
+            </a>
             <a  mat-list-item routerLink="/transcript">
                 <span class="nav-caption">Transcript</span>
             </a>
-            <a  mat-list-item routerLink="/degreecertificate">
+            <!-- <a  mat-list-item routerLink="/degreecertificate">
                 <span class="nav-caption">Degree certificate</span>
-            </a>
+            </a> -->
             <a  mat-list-item routerLink="/results">
                 <span class="nav-caption">Results</span>
             </a>
