--- a/src/styles.css
+++ b/src/styles.css
@@ -9,3 +9,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-drawer-container {
     background-color: #efefef;
 }
+
+input[disabled] {
+    cursor: not-allowed;
+}
