--- a/src/app/layouts/components/drawer/sidenav-list/payment/payment.component.html
+++ b/src/app/layouts/components/drawer/sidenav-list/payment/payment.component.html
@@ -1,1 +1,6 @@
-<p>payment works!</p>
+
+<div class="div2">
+    <p class="p1"> All Payments need to be paid at reception desk</p>
+    <p class="p2">Other modes of payment are coming soon...!!</p>
+</div>
+
