--- a/src/app/layouts/components/drawer/sidenav-list/payment/payment.component.css
+++ b/src/app/layouts/components/drawer/sidenav-list/payment/payment.component.css
@@ -9,7 +9,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    border: 2px solid black;
+    border: 2px solid grey;
   outline-style: outset;
   outline-color: grey;
 }
