--- a/src/app/layouts/components/drawer/sidenav-list/payment/payment.component.css
+++ b/src/app/layouts/components/drawer/sidenav-list/payment/payment.component.css
@@ -1,17 +1,11 @@
 .div2 {
-    display: flex;
+    max-width: 800px;
     margin: auto;
-    margin-top: 2%;
-    padding: 5px;
-    width: 700px;
-    height: 400px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    padding: 40px;
+    border: 1px solid #ced4d9;
+    border-radius: 8px;
+    margin-top: 40px;
     text-align: center;
-    border: 2px solid grey;
-  outline-style: outset;
-  outline-color: grey;
 }
 .p1{
     font-size: 20px;
@@ -21,4 +15,9 @@
 .p2{
     font-size: 15px;
     font-style: normal;
+}
+
+.page-header {
+    text-align: center;
+    padding: 20px;
 }
