--- a/src/app/layouts/components/drawer/sidenav-list/payment/payment.component.html
+++ b/src/app/layouts/components/drawer/sidenav-list/payment/payment.component.html
@@ -1,6 +1,7 @@
-
-<div class="div2">
-    <p class="p1"> All Payments need to be paid at reception desk</p>
-    <p class="p2">Other modes of payment are coming soon...!!</p>
-</div>
-
+<section>
+    <h2 class="page-header">Payment</h2>
+    <div class="div2">
+        <p class="p1"> All Payments need to be paid at reception desk</p>
+        <p class="p2">Other modes of payment are coming soon...!!</p>
+    </div>
+</section>
